--- a/字典树.md
+++ b/字典树.md
@@ -1,3 +1,24 @@
+#### [648. 单词替换](https://leetcode-cn.com/problems/replace-words/)
+
+难度中等89
+
+在英语中，我们有一个叫做 `词根`(root)的概念，它可以跟着其他一些词组成另一个较长的单词——我们称这个词为 `继承词`(successor)。例如，词根`an`，跟随着单词 `other`(其他)，可以形成新的单词 `another`(另一个)。
+
+现在，给定一个由许多词根组成的词典和一个句子。你需要将句子中的所有`继承词`用`词根`替换掉。如果`继承词`有许多可以形成它的`词根`，则用最短的词根替换它。
+
+你需要输出替换之后的句子。
+
+ 
+
+**示例 1：**
+
+```
+输入：dictionary = ["cat","bat","rat"], sentence = "the cattle was rattled by the battery"
+输出："the cat was rat by the bat"
+```
+
+
+```c
 #include <iostream>
 #include <vector>
 #include <algorithm>
@@ -94,3 +115,6 @@ public:
 		return res.substr(res.find_first_not_of(" "));
 	}
 };c
+
+```
+
