--- a/字典树.md
+++ b/字典树.md
@@ -17,31 +17,25 @@
 输出："the cat was rat by the bat"
 ```
 
-
 ```c
-#include <iostream>
-#include <vector>
-#include <algorithm>
-#include <unordered_map>
-#include <map>
-#include <set>
-#include <string.h>
-#include <cstring>
-#include <set>
-#include <utility>
-#include <vector>
-#include <sstream>
-#include <stdlib.h>
-#include <stdint.h>
-using namespace std;
 #define MAX_N 26
+#define MAX_LEN 1024
 typedef struct DicTreeNode_S{
-	int endCnt; // 词根结束标志
+	int endCnt;
 	struct DicTreeNode_S* childs[MAX_N];
 }DicTreeNode;
 
 DicTreeNode *g_root;
-
+DicTreeNode* MallocDicTreeNode(void)
+{
+	DicTreeNode* tmp;
+	tmp = (DicTreeNode*)malloc(sizeof(DicTreeNode));
+	for (int i = 0; i < MAX_N; i++) {
+		tmp->childs[i] = NULL;
+	}
+	tmp->endCnt = 0;
+    return tmp;
+}
 void AddNode(string &NodeX)
 {
 	int pos;
@@ -49,34 +43,24 @@ void AddNode(string &NodeX)
 	for (int i = 0; i < NodeX.size(); i++) {
 		pos = NodeX[i] - 'a';
 		if (p->childs[pos] == NULL) {
-			p->childs[pos] = (DicTreeNode*)malloc(sizeof(DicTreeNode));
-			for (int j = 0; j < MAX_N; j++) {
-				p->childs[pos]->childs[j] = NULL;
-			}
-			p->childs[pos]->endCnt = 0;
+			p->childs[pos] = MallocDicTreeNode();
 		}
 		p = p->childs[pos];
 	}
 	p->endCnt++;
 }
 
-
 void CreateDicTree(vector<string> &stringList)
 {
-	g_root = (DicTreeNode*)malloc(sizeof(DicTreeNode));
-	for (int i = 0; i < MAX_N; i++) {
-		g_root->childs[i] = NULL;
-	}
-	g_root->endCnt = 0;
+	g_root = MallocDicTreeNode();
 	for (int i = 0; i < stringList.size(); i++) {
 		AddNode(stringList[i]);
 	}
 }
-
 bool Search(string& s, string& out)
 {
-	DicTreeNode* p = g_root;
 	int pos;
+    DicTreeNode* p = g_root;
 	for (int i = 0; i < s.size(); i++) {
 		pos = s[i] - 'a';
 		p = p->childs[pos];
@@ -93,6 +77,7 @@ bool Search(string& s, string& out)
 	return false;
 }
 
+/* 解答 */
 class Solution {
 public:
 	string replaceWords(vector<string>& dictionary, string sentence) {
@@ -114,7 +99,5 @@ public:
 		}
 		return res.substr(res.find_first_not_of(" "));
 	}
-};c
-
+};
 ```
-
