--- a/字典树.md
+++ b/字典树.md
@@ -18,86 +18,79 @@
 ```
 
 ```c
-#define MAX_N 26
-#define MAX_LEN 1024
-typedef struct DicTreeNode_S{
+using namespace std;
+#define MAX_CHILDRENS_LEN 26
+typedef struct DictTreeNode_S {
 	int endCnt;
-	struct DicTreeNode_S* childs[MAX_N];
-}DicTreeNode;
+	struct DictTreeNode_S* childrens[MAX_CHILDRENS_LEN];
+}DictTreeNode;
 
-DicTreeNode *g_root;
-DicTreeNode* MallocDicTreeNode(void)
-{
-	DicTreeNode* tmp;
-	tmp = (DicTreeNode*)malloc(sizeof(DicTreeNode));
-	for (int i = 0; i < MAX_N; i++) {
-		tmp->childs[i] = NULL;
+DictTreeNode* g_root;
+
+DictTreeNode* MalllocNewDictTreeNode() {
+	DictTreeNode* NewDictTreeNode = (DictTreeNode*)malloc(sizeof(DictTreeNode));
+	for (int i = 0; i < MAX_CHILDRENS_LEN; i++) {
+		NewDictTreeNode->childrens[i] = NULL;
 	}
-	tmp->endCnt = 0;
-    return tmp;
+	NewDictTreeNode->endCnt = 0;
+	return NewDictTreeNode;
 }
-void AddNode(string &NodeX)
+
+void AddStringToDictTree(string& str)
 {
 	int pos;
-	DicTreeNode* p = g_root;
-	for (int i = 0; i < NodeX.size(); i++) {
-		pos = NodeX[i] - 'a';
-		if (p->childs[pos] == NULL) {
-			p->childs[pos] = MallocDicTreeNode();
+	DictTreeNode* p = g_root;
+	for (int i = 0; i < str.size(); i++) {
+		pos = str[i] - 'a';
+		if (p->childrens[pos] == NULL) {
+			p->childrens[pos] = MalllocNewDictTreeNode();
 		}
-		p = p->childs[pos];
+		p = p->childrens[pos];
 	}
 	p->endCnt++;
 }
-
-void CreateDicTree(vector<string> &stringList)
+void CreateDictTree(vector<string>& dictionary)
 {
-	g_root = MallocDicTreeNode();
-	for (int i = 0; i < stringList.size(); i++) {
-		AddNode(stringList[i]);
+	g_root = MalllocNewDictTreeNode();
+	for (int i = 0; i < dictionary.size(); i++) {
+		AddStringToDictTree(dictionary[i]);
 	}
 }
-bool Search(string& s, string& out)
-{
-	int pos;
-    DicTreeNode* p = g_root;
-	for (int i = 0; i < s.size(); i++) {
-		pos = s[i] - 'a';
-		p = p->childs[pos];
-		if (p == NULL) {
-			return false;
-		}
-		else {
-			if (p->endCnt == 1) {
-				out = s.substr(0, i + 1);
-				return true;
-			}
-		}
-	}
-	return false;
-}
 
-/* 解答 */
+bool SearchStringInDictTree(DictTreeNode* p, string str, int& cnt)
+{
+    if (str.size() == 0) {
+        return false;
+    }
+	if (p->childrens[str[0] - 'a'] == NULL) {
+		return false;
+	}
+	if (p->childrens[str[0] - 'a'] && p->childrens[str[0] - 'a']->endCnt == 1) {
+		return true;
+	}
+	cnt++;
+	return SearchStringInDictTree(p->childrens[str[0] - 'a'], str.substr(1, str.size()), cnt);
+}
 class Solution {
 public:
 	string replaceWords(vector<string>& dictionary, string sentence) {
-		CreateDicTree(dictionary);
-		stringstream StreamSentence(sentence);
-		string IthSentence;
+		CreateDictTree(dictionary);
 		string res = "";
-		string outTmp;
-        // 流按空格分割字符串
-		while (StreamSentence >> IthSentence) {
-			if (Search(IthSentence, outTmp)) {
-				res += " ";
-				res += outTmp;
+		string tmp;
+		stringstream p(sentence);
+		int cnt = 1;
+		while (p >> tmp)
+		{
+            res += " ";
+			if (SearchStringInDictTree(g_root, tmp, cnt)) {
+				res += tmp.substr(0, cnt);
 			}
 			else {
-				res += " ";
-				res += IthSentence;
+				res += tmp;
 			}
+			cnt = 1;
 		}
-		return res.substr(res.find_first_not_of(" "));
+		return res == "" ? "": res.substr(1, res.size());
 	}
 };
 ```
